Перебрал макет на модули

--- a/app/ads.html
+++ b/app/ads.html
@@ -1,103 +1,87 @@
-<!DOCTYPE html>
-<html lang="ru">
+@@include('template/system/head.html')
+@@include('template/system/header.html')
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Продвижение и сопровождение на маркетплейсах</title>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/style.min.css" />
-</head>
-
-<body class="page" id="top">
-    <div class="page__wrapper">
-        @@include('template/header.html')
-
-        <main class="page__content">
-            <section class="main main-screen box-shadow">
-                <div class="container">
-                    <div class="main-screen__wrapper">
-                        <div class="main-screen__content">
-                            <div class="main-screen__subtitle">
-                                <p>
-                                    Продвижение на всех маркетплейсах
-                                    ЭКОлогичными способами!
-                                </p>
-                            </div>
-                            <h1>Продвижение и сопровождение на <span>маркетплейсах</span></h1>
-                            <button class="btn">Заполнить заявку</button>
-                        </div>
-                        <!-- /.main-screen__content -->
-                        <div class="main-screen__images">
-                            <img src="assets/img/infographics/phone_market.png" alt="">
-                        </div>
-                        <!-- /.main-screen__images -->
+<main class="page__content">
+    <section class="main main-screen box-shadow">
+        <div class="container">
+            <div class="main-screen__wrapper">
+                <div class="main-screen__content">
+                    <div class="main-screen__subtitle">
+                        <p>
+                            Продвижение на всех маркетплейсах
+                            ЭКОлогичными способами!
+                        </p>
                     </div>
-                    <!-- /.main-screen__wrapper -->
+                    <h1>Продвижение и сопровождение на <span>маркетплейсах</span></h1>
+                    <button class="btn">Заполнить заявку</button>
                 </div>
-                <!-- /.container -->
-            </section>
-            <!-- /.main-screen -->
-            <section class="ads-service">
-                <div class="container">
-                    <div class="ads-service__wrapper">
-                        <a href="#" class="card-main">
-                            <div class="card-main__content">
-                                <p>Профессиональная настройка SEO</p>
-                            </div>
-                            <!-- /.card-main__content -->
-                            <div class="card-main__image">
-                                <img src="assets/img/infographics/raketa.png" alt="">
-                            </div>
-                            <!-- /.card-main__image -->
-                        </a>
-                        <!-- /.card-main -->
-                        <div class="card-main">
-                            <div class="card-main__content">
-                                <p>Разработка лучших дизайнов</p>
-                            </div>
-                            <!-- /.card-main__content -->
-                            <div class="card-main__image">
-                                <img src="assets/img/infographics/colors.png" alt="">
-                            </div>
-                            <!-- /.card-main__image -->
-                        </div>
-                        <!-- /.card-main -->
-                        <div class="card-main">
-                            <div class="card-main__content">
-                                <p>Полная аналитика, исследование рынка</p>
-                            </div>
-                            <!-- /.card-main__content -->
-                            <div class="card-main__image">
-                                <img src="assets/img/infographics/computer.png" alt="">
-                            </div>
-                            <!-- /.card-main__image -->
-                        </div>
-                        <!-- /.card-main -->
-                        <div class="card-main">
-                            <div class="card-main__content">
-                                <p>Полное сопровождение и продвижение под ключ</p>
-                            </div>
-                            <!-- /.card-main__content -->
-                            <div class="card-main__image">
-                                <img src="assets/img/infographics/money.png" alt="">
-                            </div>
-                            <!-- /.card-main__image -->
-                        </div>
-                        <!-- /.card-main -->
+                <!-- /.main-screen__content -->
+                <div class="main-screen__images">
+                    <img src="assets/img/infographics/phone_market.png" alt="">
+                </div>
+                <!-- /.main-screen__images -->
+            </div>
+            <!-- /.main-screen__wrapper -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.main-screen -->
+    <section class="ads-service">
+        <div class="container">
+            <div class="ads-service__wrapper">
+                <a href="#" class="card-main">
+                    <div class="card-main__content">
+                        <p>Профессиональная настройка SEO</p>
                     </div>
-                    <!-- /.ads-service__wrapper -->
-                    @@include('template/marketplace.html')
+                    <!-- /.card-main__content -->
+                    <div class="card-main__image">
+                        <img src="assets/img/infographics/raketa.png" alt="">
+                    </div>
+                    <!-- /.card-main__image -->
+                </a>
+                <!-- /.card-main -->
+                <div class="card-main">
+                    <div class="card-main__content">
+                        <p>Разработка лучших дизайнов</p>
+                    </div>
+                    <!-- /.card-main__content -->
+                    <div class="card-main__image">
+                        <img src="assets/img/infographics/colors.png" alt="">
+                    </div>
+                    <!-- /.card-main__image -->
                 </div>
-                <!-- /.container -->
-            </section>
-            <!-- /.ads-service -->
+                <!-- /.card-main -->
+                <div class="card-main">
+                    <div class="card-main__content">
+                        <p>Полная аналитика, исследование рынка</p>
+                    </div>
+                    <!-- /.card-main__content -->
+                    <div class="card-main__image">
+                        <img src="assets/img/infographics/computer.png" alt="">
+                    </div>
+                    <!-- /.card-main__image -->
+                </div>
+                <!-- /.card-main -->
+                <div class="card-main">
+                    <div class="card-main__content">
+                        <p>Полное сопровождение и продвижение под ключ</p>
+                    </div>
+                    <!-- /.card-main__content -->
+                    <div class="card-main__image">
+                        <img src="assets/img/infographics/money.png" alt="">
+                    </div>
+                    <!-- /.card-main__image -->
+                </div>
+                <!-- /.card-main -->
+            </div>
+            <!-- /.ads-service__wrapper -->
+            @@include('template/marketplace.html')
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.ads-service -->
 
-        </main>
-        <!-- END page__content -->
+</main>
+<!-- END page__content -->
 
-        @@include('template/footer.html')
-</body>
-
-</html>
+@@include('template/system/footer.html')
