--- a/app/index.html
+++ b/app/index.html
@@ -1,48 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
+@@include('template/system/head.html')
+@@include('template/system/header.html')
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок</title>
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.min.css" />
-    <!-- <link rel="stylesheet" href="assets/library/vendor.min.css" /> -->
-</head>
+<main class="page__content">
+    <section class="main"></section>
+</main>
+<!-- END page__content -->
 
-<body class="page" id="top">
-    <div class="page__wrapper">
-        <header class="header">
-
-        </header>
-        <!-- END header -->
-
-        <main class="page__content">
-
-        </main>
-        <!-- END page__content -->
-
-        <footer class="footer" id="footer">
-
-        </footer>
-        <!-- END footer -->
-
-        <div class="popup" id="mainForm">
-            <div class="popup__content">
-                <div class="popup__body">
-                    <button class="popup__close"></button>
-                </div>
-            </div>
-            <!-- /.popup__content -->
-        </div>
-        <!-- /.popup -->
-    </div>
-    <!-- END page__wrapper -->
-
-    <!-- scripts -->
-    <!-- <script src="assets/library/vendor.min.js"></script> -->
-    <script src="assets/js/main.min.js"></script>
-</body>
-
-</html>
+@@include('template/system/footer.html')
